--- a/web/internet-explorer-bug/internet-explorer-bug.html
+++ b/web/internet-explorer-bug/internet-explorer-bug.html
@@ -1,3 +1,3 @@
 <div id="main-div">
-  <internet-explorer-bug-blue></internet-explorer-bug-blue>
+  <div class="red-div">Red background?</div>
 </div>
