Shadow dom polyfill replaced with Web_components (suggested by Günter Zöchbauer here: http://stackoverflow.com/questions/23985539/angular-dart-components-cssurl-not-working-in-internet-explorer)

--- a/web/iebug.html
+++ b/web/iebug.html
@@ -4,6 +4,8 @@
   <head>
     <meta charset="utf-8">
     <title>Iebug</title>
+    <script src="packages/web_components/platform.js"></script>
+    <script src="packages/web_components/dart_support.js"></script>
     <link rel="stylesheet" href="iebug.css">
   </head>
   <body>
@@ -11,7 +13,6 @@
     
     <internet-explorer-bug></internet-explorer-bug>
     
-    <script src="packages/shadow_dom/shadow_dom.min.js"></script>
     <script type="application/dart" src="iebug.dart"></script>
     <script src="packages/browser/dart.js"></script>
   </body>
